comment out get device for groupID
