# api/admin-api-spec.yaml
@@ -111,33 +111,33 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           
-  /getDevicesForGroupID:
-    get:
-      x-swagger-router-controller: deviceInfoController
-      operationId: getDevicesForGroupID
-      tags:
-        - Device Info
-      description: Returns the IDs of the devices in a group
-      parameters:
-        - name: groupID
-          in: query
-          description: The database ID of the group to get data for
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Success'
-        default:
-          description: Invalid request.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'          
+  # /getDevicesForGroupID:
+  #   get:
+  #     x-swagger-router-controller: deviceInfoController
+  #     operationId: getDevicesForGroupID
+  #     tags:
+  #       - Device Info
+  #     description: Returns the IDs of the devices in a group
+  #     parameters:
+  #       - name: groupID
+  #         in: query
+  #         description: The database ID of the group to get data for
+  #         required: true
+  #         schema:
+  #           type: string
+  #     responses:
+  #       '200':
+  #         description: Successful request.
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Success'
+  #       default:
+  #         description: Invalid request.
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: '#/components/schemas/Error'          
                 
                 
   /deleteDeviceInfo:
